--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hello
-description: A new Flutter package project.
+description: flutter package hello.
 version: 0.0.1
-homepage:
+homepage: https://github.com/SoftCodeIndonesia/flutter_package_hello.git
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
